# art-store-rest-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  middleware.py  pyproject.toml  test.html
authors/: admin.py  models.py  serializers.py  urls.py  views.py
authors/customapi/: apps.py  services.py  signals.py
authors/customapi/serializers/: checkout.py  product.py
authors/customapi/views/: checkout.py
authors/migrations/: 0001_initial.py  0002_auto_20230430_0203.py
common/: utlis.py
config/: settings.py  urls.py
custom_apps/catalogue/: models.py
custom_apps/catalogue/migrations/: 0027_auto_20230430_0210.py  0028_alter_product_author.py
custom_apps/dashboard/catalogue/: forms.py
custom_apps/oscar/: __init__.py  apps.py
custom_apps/partner/: models.py
custom_apps/partner/migrations/: 0007_auto_20230429_1546.py  0008_auto_20230430_0203.py
templates/oscar/communication/emails/: base.html  commtype_order_placed_body.html  commtype_order_placed_subject.txt
templates/oscar/dashboard/catalogue/: product_update.html
