[tool.poetry]
name = "art-vostorg-store"
version = "0.1.0"
description = ""
authors = ["Mikhail <mikhailfedorov1939@gmail.com>"]
readme = "README.md"
packages = [{include = "config"}]

[tool.poetry.dependencies]
python = "^3.10"
django-oscar = "^3.2"
sorl-thumbnail = "^12.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
